# src/models/Whatsapp.ts
@@ -1,0 +1,6 @@
+type Whatsapp = {
+    body: String; 
+    to: String;
+}
+export default Whatsapp
+
